added fonts method initial commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="card2">Click to list all fonts</string>
     <string name="card3header">Layers Manager</string>
     <string name="card3">Click to launch Layers Manager</string>
+    <string name="reboot">Reboot</string>
+    <string name="PreformReboot">Perform a soft reboot?</string>
 
 
     <!-- BOOTANIM MAIN SCREEN CARD TEXT -->
